--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,10 @@
   </head>
   <body>
     <h1>Hello Extensions!</h1>
-    <script src="popup.js"></script>
+    <!-- <label for="water">Water Frequency</label>
+    <input type="text" id="water" name="water"> -->
+    <!-- <button id="waterButton">Water?</button> -->
+    <!-- <script src="users.js"></script> -->
+    <script src="popup.js"></script> 
   </body>
 </html>
