--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hello Extensions!</h1>
+    <h1>ZenChecker</h1>
     <!-- <label for="water">Water Frequency</label>
     <input type="text" id="water" name="water"> -->
     <!-- <button id="waterButton">Water?</button> -->
